# agent-shield

./: .gitignore  README.md  pyproject.toml
src/agent_shield/: cli.py
src/agent_shield/config/: loader.py  schema.py
src/agent_shield/evaluator/: __init__.py  base.py  contains.py  json_schema.py  length.py  regex.py
src/agent_shield/reporter/: html_report.py  json_report.py  junit_report.py  markdown_report.py  terminal.py
src/agent_shield/runner/: executor.py  hooks.py  queue.py
tests/: test_cli.py  test_config_loader.py  test_evaluators.py  test_extra_reporters.py  test_reporters.py  test_runner.py
