[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-shield"
version = "0.1.0"
description = "CLI tool that tests AI agent systems for functional correctness, resilience, and security."
readme = "README.md"
license = "AGPL-3.0-or-later"
requires-python = ">=3.11"
dependencies = [
    "typer[all]>=0.9",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "httpx>=0.25",
    "rich>=13.0",
    "jsonschema>=4.20",
    "jmespath>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[project.scripts]
agent-shield = "agent_shield.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_shield"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
